--- a/src/index.css
+++ b/src/index.css
@@ -183,3 +183,16 @@ this css also work for both angle up and down with this single class style by a 
   content: "";
   opacity: 0.1;
 }
+
+/* reservationCard component style */
+.reservation-circle::after {
+  position: absolute;
+  bottom: -45px;
+  right: -45px;
+  height: 300px;
+  width: 300px;
+  content: "";
+  background-color: #f97f6c;
+  border-radius: 50%;
+  z-index: -1;
+}
